--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
       </div>
     </div>
     <div class="col-md-10 graph">
-      <div id="scatterPlot" class="svk"></div>
-      <div id="histogramPlot" class="svk1"></div>
+      <div id="scatterPlot"></div>
+      <div id="histogramPlot"></div>
     </div>
-    <!-- <div id="div_customContent"></div> -->
+    <div id="div_customContent"></div>
 
   </div>
 
