update cursor point

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+  <div class="top-title">
+    select scene, on top of class select 2 classes , on top of features select features list
+  </div>
 
   <div class="main">
     <div class="col-md-2">
@@ -71,8 +74,8 @@
     <div class="col-md-10 graph">
       <div id="scatterPlot"></div>
       <div id="histogramPlot"></div>
+      <div id="div_customContent"></div>
     </div>
-    <div id="div_customContent"></div>
 
   </div>
 
