update position for legendo

--- a/index.html
+++ b/index.html
@@ -17,13 +17,14 @@
 </head>
 
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
-  <div class="top-title">
-    select scene, on top of class select 2 classes , on top of features select features list
-  </div>
-
   <div class="main">
     <div class="col-md-2">
-
+      <div class="top-title">
+        select scene,<br/>
+        select 2 classes,<br/>
+        select features list<br/>
+      </div>
+      <hr style="border-color: rgb(138, 137, 137);">
       <div>
         <input type="radio" name="optradio" id="scince1" checked>
         <label for="scince1">Scene 1</label>
