update for task 2

--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
 
 
       }
-      console.log(checkedClasses)
+      
+      console.log(checkedClasses[0][0])
+      console.log(checkedClasses[1][0])
 
       if (valueOfSeseion["id"] == "scince1") {
         givenurl = "dosyalar/all_features_300_scene_1_complete.csv"
